[gd_scene load_steps=8 format=3 uid="uid://dhfkj1t1te6s8"]

[ext_resource type="Script" path="res://TestDoDelete.gd" id="1_iaaw2"]
[ext_resource type="Script" path="res://doDeleteTestv2.gd" id="2_5bvss"]
[ext_resource type="Texture2D" uid="uid://co6vuy44sh3ry" path="res://MapGame/test.png" id="2_boa2i"]
[ext_resource type="Texture2D" uid="uid://cdcpud88eml05" path="res://army/knight.png" id="5_8rsbh"]
[ext_resource type="Script" path="res://PathDelete.gd" id="5_ahvhx"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qqjpb"]
texture = ExtResource("2_boa2i")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
12:3/0/custom_data_0 = true
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0

[sub_resource type="TileSet" id="TileSet_pwh4j"]
tile_size = Vector2i(64, 64)
custom_data_layer_0/name = "walkable"
custom_data_layer_0/type = 1
sources/0 = SubResource("TileSetAtlasSource_qqjpb")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_iaaw2")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_pwh4j")
format = 2
layer_0/tile_data = PackedInt32Array(131078, 0, 7, 196614, 0, 7, 262150, 0, 7, 327686, 0, 7, 393222, 0, 7, 458758, 0, 7, 524294, 0, 7, 589830, 786432, 3, 655366, 786432, 3, 720902, 786432, 3, 786438, 786432, 3, 131079, 0, 7, 196615, 0, 7, 262151, 0, 7, 327687, 0, 7, 393223, 0, 7, 458759, 0, 7, 524295, 0, 7, 589831, 0, 7, 655367, 0, 7, 720903, 786432, 3, 786439, 786432, 3, 131080, 0, 7, 196616, 0, 7, 262152, 0, 7, 327688, 0, 7, 393224, 0, 7, 458760, 0, 7, 524296, 0, 7, 589832, 0, 7, 655368, 0, 7, 720904, 786432, 3, 786440, 786432, 3, 131081, 786432, 3, 196617, 786432, 3, 262153, 786432, 3, 327689, 786432, 3, 393225, 0, 7, 458761, 0, 7, 524297, 0, 7, 589833, 0, 7, 655369, 0, 7, 720905, 786432, 3, 786441, 786432, 3, -65535, 786432, 3, 1, 786432, 3, 65537, 786432, 3, 131073, 786432, 3, 196609, 786432, 3, 262145, 786432, 3, 327681, 786432, 3, 393217, 786432, 3, 458753, 786432, 3, 524289, 786432, 3, 589825, 786432, 3, 655361, 786432, 3, 720897, 786432, 3, 786433, 786432, 3, 851969, 786432, 3, 917505, 786432, 3, -65534, 786432, 3, 2, 786432, 3, 65538, 786432, 3, 131074, 786432, 3, 196610, 786432, 3, 262146, 786432, 3, 327682, 786432, 3, 393218, 786432, 3, 458754, 786432, 3, 524290, 786432, 3, 589826, 786432, 3, 655362, 786432, 3, 720898, 786432, 3, 786434, 786432, 3, 851970, 786432, 3, 917506, 786432, 3, -65533, 786432, 3, 3, 786432, 3, 65539, 786432, 3, 131075, 786432, 3, 196611, 786432, 3, 262147, 786432, 3, 327683, 786432, 3, 393219, 786432, 3, 458755, 786432, 3, 524291, 786432, 3, 589827, 786432, 3, 655363, 786432, 3, 720899, 786432, 3, 786435, 786432, 3, 851971, 786432, 3, 917507, 786432, 3, -65532, 786432, 3, 4, 786432, 3, 65540, 0, 7, 131076, 0, 7, 196612, 0, 7, 262148, 0, 7, 327684, 0, 7, 393220, 0, 7, 458756, 0, 7, 524292, 0, 7, 589828, 786432, 3, 655364, 786432, 3, 720900, 786432, 3, 786436, 786432, 3, 851972, 786432, 3, 917508, 786432, 3, -65531, 786432, 3, 5, 786432, 3, 65541, 0, 7, 131077, 0, 7, 196613, 0, 7, 262149, 0, 7, 327685, 0, 7, 393221, 0, 7, 458757, 0, 7, 524293, 0, 7, 589829, 786432, 3, 655365, 786432, 3, 720901, 786432, 3, 786437, 786432, 3, 851973, 786432, 3, 917509, 786432, 3, -65538, 786432, 3, -2, 786432, 3, 65534, 786432, 3, 131070, 786432, 3, 196606, 786432, 3, 262142, 786432, 3, 327678, 786432, 3, 393214, 786432, 3, 458750, 786432, 3, 524286, 786432, 3, 589822, 786432, 3, 655358, 786432, 3, 720894, 786432, 3, 786430, 786432, 3, 851966, 786432, 3, 917502, 786432, 3, 983038, 786432, 3, 1048574, 786432, 3, -65537, 786432, 3, -1, 786432, 3, 65535, 786432, 3, 131071, 786432, 3, 196607, 786432, 3, 262143, 786432, 3, 327679, 786432, 3, 393215, 786432, 3, 458751, 786432, 3, 524287, 786432, 3, 589823, 786432, 3, 655359, 786432, 3, 720895, 786432, 3, 786431, 786432, 3, 851967, 786432, 3, 917503, 786432, 3, 983039, 786432, 3, 1048575, 786432, 3, -131072, 786432, 3, -65536, 786432, 3, 0, 786432, 3, 65536, 786432, 3, 131072, 786432, 3, 196608, 786432, 3, 262144, 786432, 3, 327680, 786432, 3, 393216, 786432, 3, 458752, 786432, 3, 524288, 786432, 3, 589824, 786432, 3, 655360, 786432, 3, 720896, 786432, 3, 786432, 786432, 3, 851968, 786432, 3, 917504, 786432, 3, 983040, 786432, 3, -131071, 786432, 3, 983041, 786432, 3, -131070, 786432, 3, 983042, 786432, 3, -131069, 786432, 3, 983043, 786432, 3, -131068, 786432, 3, 983044, 786432, 3, 851974, 786432, 3, 917510, 786432, 3, 851975, 786432, 3, 917511, 786432, 3, 851976, 786432, 3, 917512, 786432, 3, 851977, 786432, 3, 917513, 786432, 3, 851978, 786432, 3, 917514, 786432, 3, 851979, 786432, 3, 917515, 786432, 3, 851980, 786432, 3, 917516, 786432, 3, 851981, 786432, 3, 917517, 786432, 3, 851982, 786432, 3, 917518, 786432, 3, 851983, 786432, 3, 917519, 786432, 3, 851984, 786432, 3, 917520, 786432, 3, 393226, 0, 7, 458762, 0, 7, 524298, 0, 7, 589834, 0, 7, 655370, 0, 7, 393227, 0, 7, 458763, 0, 7, 524299, 0, 7, 589835, 0, 7, 655371, 0, 7, 393228, 0, 7, 458764, 0, 7, 524300, 0, 7, 589836, 0, 7, 655372, 0, 7, 393229, 0, 7, 458765, 0, 7, 524301, 0, 7, 589837, 0, 7, 655373, 0, 7, 393230, 0, 7, 458766, 0, 7, 524302, 0, 7, 589838, 0, 7, 655374, 0, 7, 393231, 0, 7, 458767, 0, 7, 524303, 0, 7, 589839, 0, 7, 655375, 0, 7, -131067, 786432, 3, -131066, 786432, 3, -65530, 786432, 3, 6, 786432, 3, 65542, 0, 7, -131065, 786432, 3, -65529, 786432, 3, 7, 786432, 3, 65543, 0, 7, -131064, 786432, 3, -65528, 786432, 3, 8, 786432, 3, 65544, 0, 7, -131063, 786432, 3, -65527, 786432, 3, 9, 786432, 3, 65545, 786432, 3, -131062, 786432, 3, -65526, 786432, 3, 10, 786432, 3, 65546, 0, 7, 131082, 0, 7, -131061, 786432, 3, -65525, 786432, 3, 11, 786432, 3, 65547, 0, 7, 131083, 0, 7, -131060, 786432, 3, -65524, 786432, 3, 12, 786432, 3, 65548, 0, 7, 131084, 0, 7, -131059, 786432, 3, -65523, 786432, 3, 13, 786432, 3, 65549, 0, 7, 131085, 0, 7, -131058, 786432, 3, -65522, 786432, 3, 14, 786432, 3, 65550, 0, 7, 131086, 0, 7, -131057, 786432, 3, -65521, 786432, 3, 15, 786432, 3, 65551, 0, 7, 131087, 0, 7, 262156, 0, 7, 327692, 0, 7, 262157, 0, 7, 327693, 0, 7, 262158, 0, 7, 327694, 0, 7, 262159, 0, 7, 327695, 0, 7, 262160, 786432, 3, 327696, 786432, 3, 393232, 786432, 3, 458768, 786432, 3, 262161, 786432, 3, 327697, 786432, 3, 393233, 786432, 3, 458769, 786432, 3, 262162, 786432, 3, 327698, 786432, 3, 393234, 786432, 3, 458770, 786432, 3, 196618, 0, 7, 262154, 0, 7, 327690, 0, 7, 720906, 786432, 3, 196619, 0, 7, 262155, 0, 7, 327691, 0, 7, 720907, 786432, 3, 196620, 0, 7, 720908, 786432, 3, 196621, 0, 7, 720909, 786432, 3, 196622, 0, 7, 720910, 786432, 3, 196623, 0, 7, 720911, 786432, 3, 65552, 786432, 3, 131088, 786432, 3, 196624, 786432, 3, 524304, 786432, 3, 589840, 786432, 3, 655376, 786432, 3, 720912, 786432, 3, 65553, 786432, 3, 131089, 786432, 3, 196625, 786432, 3, 524305, 786432, 3, 589841, 786432, 3, 655377, 786432, 3, 720913, 786432, 3, 65554, 786432, 3, 131090, 786432, 3, 196626, 786432, 3, 524306, 786432, 3, 589842, 786432, 3, 655378, 786432, 3, 720914, 786432, 3, 65555, 786432, 3, 131091, 786432, 3, 196627, 786432, 3, 262163, 786432, 3, 327699, 786432, 3, 393235, 786432, 3, 458771, 786432, 3, 524307, 786432, 3, 589843, 786432, 3, 655379, 786432, 3, 720915, 786432, 3, 786445, 786432, 3, 983053, 786432, 3, 786442, 786432, 3, 786443, 786432, 3, 786444, 786432, 3, 786446, 786432, 3, 786447, 786432, 3, 786448, 786432, 3, 786449, 786432, 3, 851985, 786432, 3, 917521, 786432, 3, 786450, 786432, 3, 851986, 786432, 3, 917522, 786432, 3, 1114110, 786432, 3, 1114111, 786432, 3, 1048576, 786432, 3, 1048577, 786432, 3, 1048578, 786432, 3, 1048579, 786432, 3, 1048580, 786432, 3, 983045, 786432, 3, 1048581, 786432, 3, 983046, 786432, 3, 1048582, 786432, 3, 983047, 786432, 3, 1048583, 786432, 3, 983048, 786432, 3, 1048584, 786432, 3, 983049, 786432, 3, 1048585, 786432, 3, 983050, 786432, 3, 1048586, 786432, 3, 983051, 786432, 3, 1048587, 786432, 3, 983052, 786432, 3, 1048588, 786432, 3, 1048589, 786432, 3, 983054, 786432, 3, 1048590, 786432, 3, 983055, 786432, 3, 1048591, 786432, 3, -131056, 786432, 3, -65520, 786432, 3, 16, 786432, 3, 983056, 786432, 3, 1048592, 786432, 3, -131055, 786432, 3, -65519, 786432, 3, 17, 786432, 3, 983057, 786432, 3, 1048593, 786432, 3, -131054, 786432, 3, -65518, 786432, 3, 18, 786432, 3, 983058, 786432, 3, 1048594, 786432, 3, -131053, 786432, 3, -65517, 786432, 3, 19, 786432, 3, 786451, 786432, 3, 851987, 786432, 3, 917523, 786432, 3, 983059, 786432, 3, 1048595, 786432, 3, -131052, 786432, 3, -65516, 786432, 3, 20, 786432, 3, 65556, 786432, 3, 131092, 786432, 3, 196628, 786432, 3, 262164, 786432, 3, 327700, 786432, 3, 393236, 786432, 3, 458772, 786432, 3, 524308, 786432, 3, 589844, 786432, 3, 655380, 786432, 3, 720916, 786432, 3, 786452, 786432, 3, 851988, 786432, 3, 917524, 786432, 3, 983060, 786432, 3, 1048596, 786432, 3)

[node name="Path" type="Node2D" parent="."]
script = ExtResource("5_ahvhx")

[node name="Button" type="Button" parent="Path"]
offset_right = 83.0
offset_bottom = 31.0
text = "Next turn"

[node name="Button2" type="Button" parent="Path"]
offset_left = 104.0
offset_right = 153.0
offset_bottom = 31.0
text = "RUSZ"

[node name="Player" type="Node2D" parent="."]
position = Vector2(32, 32)
script = ExtResource("2_5bvss")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("5_8rsbh")

[connection signal="pressed" from="Path/Button" to="Path" method="_on_button_pressed"]
[connection signal="pressed" from="Path/Button2" to="Path" method="_on_button_2_pressed"]
[connection signal="DeleteLine" from="Player" to="Path" method="_on_player_delete_line"]
